# list_serialization

./: CMakeLists.txt  README.md  list.c  list.h  serialization_list.c
deserialize_process/: CMakeLists.txt
deserialize_process/src/: deserialize_process.c
mylist/: CMakeLists.txt  Makefile
mylist/include/: list.h
mylist/src/: list.c
serialize_list/: CMakeLists.txt
serialize_list/include/: serial_list.h
serialize_list/src/: serialization_list.c
serialize_process/: CMakeLists.txt
serialize_process/src/: serialize_process.c
